# examples

./: .gitignore  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: build-onvif-video-broker-container.yml  build-opcua-monitoring-broker-container.yml  build-python-app-containers.yml  build-rust-broker-containers.yml
apps/anomaly-detection-app/: README.md  requirements.txt
apps/anomaly-detection-app/templates/: index.html
apps/video-streaming-app/: README.md
brokers/onvif-video-broker/: README.md
brokers/opcua-monitoring-broker/: README.md  opcua_node.proto
brokers/udev-video-broker/: Cargo.toml  README.md
