[package]
name = "udev-video-broker"
authors = ["The Akri Team"]
version = "0.13.21"
edition = "2024" 
license = "Apache-2.0"
homepage = "https://docs.akri.sh/"
repository = "https://github.com/project-akri/akri-examples"
rust-version = "1.88" 

[dependencies]
akri-shared = { git = "https://github.com/project-akri/akri.git", tag = "v0.13.8" }
env_logger = "0.11.8"
lazy_static = "1.4"
log = "0.4.3"
prometheus = { version = "0.12.0", features = ["process"] }
prost = "0.12"
regex = "1"
tokio = { version = "1.0.1", features = ["time", "fs", "macros", "signal"] }
tonic = "0.10"
rscam = "0.5.5"

[build-dependencies]
tonic-build = "0.10"
